<resources>
    <string name="app_name">Tobaccoach_5_2</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile (GATT)
            to transmit arbitrary data between devices.


        ]]>
    </string>

    <string name="team_introduction">Personal smoking pattern management system using connected cigarette case</string>
    <string name="team_name">역적들 | 한성대학교 | 컴퓨터공학부</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="time_sync_complete">Completed Sync</string>
    <string name="time_sync_required">Sync Required</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_my_device_controller">MyDeviceController</string>
    <string name="title_home">Home</string>
    <string name="title_today">TodaySmoked</string>
    <string name="title_dev">DevSetting</string>
    <string name="title_activity_login">Sign in</string>


    <string name="title_activity_tobacco_list">TobaccoListActivity</string>
    <string name="title_activity_my_device_controller_tabbed">MyDeviceControllerTabbedActivity
    </string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- kakao link -->
    <string name="kakao_app_key">32762528d8d726da58d2e94296215d08</string>
    <string name="kakao_scheme">kakao32762528d8d726da58d2e94296215d08</string>
    <string name="kakaolink_host">kakaolink</string>

    <!-- Fragment Titles -->
    <string name="title_my_tobacco">Tobacco</string>
    <string name="title_daily_chart">Coach</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_device_setting">Device</string>
    <string name="title_calendar">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- CoachFragment -->

</resources>
