<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_my_tobacco"
        android:icon="@drawable/ic_accessibility_black_24dp"
        android:title="@string/title_my_tobacco"
        />

    <item
        android:id="@+id/navigation_daily_chart"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:title="@string/title_daily_chart" />
    <!--<item
        android:id="@+id/navigation_device_setting"
        android:icon="@drawable/ic_settings_remote_black_24dp"
        android:title="@string/title_device_setting"
        />-->

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/title_ranking" />
</menu>