<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_background_color"
    tools:context="seungchan.com.tobaccoach_5_2.deviceServiceController.MyDeviceController">

    <!-- Home Framelayout -->
    <FrameLayout
        android:id="@+id/frame_navigation_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/message_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/title_home" />
        <WebView
            android:id="@+id/webview_tobaccoach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>

    <!-- Today Framelayout -->
    <FrameLayout
        android:id="@+id/frame_navigation_today"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/message_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/title_today" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tobaccoach_smoke_today"
            android:layout_gravity="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            />
        <ProgressBar
            android:id="@+id/today_average_amount_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleX="2.2"
            android:scaleY="2.2"
            android:layout_gravity="center"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/progressbar_today_average_amount"
            android:rotation="-90" />
        <!-- Today cigarette amount and Average cigarette amount -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/today_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="0"
                android:textSize="50sp"
                />
            <TextView
                android:id="@+id/average_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toRightOf="@id/today_amount"
                android:layout_alignBaseline="@id/today_amount"
                android:text="/0"
                android:textSize="20sp" />
        </RelativeLayout>
    </FrameLayout>

    <!-- Dev Framelayout -->
    <FrameLayout
        android:id="@+id/frame_navigation_dev"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/message_dev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/title_dev" />
        <!-- HW 로부터 EJECT시 BLE로 찍히는 YY/MM/DD-HH:MM:SS 로그 -->
        <!--<ListView
            android:id="@+id/list_log_from_HW"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/main_tobaccoach_title"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/tobaccoach_title"
                android:layout_marginTop="60dp"
                />
            <!-- Connection State and Message from HW -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/main_tobaccoach_title"
                android:id="@+id/linearLayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SYNCHRONIZE TIME"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:gravity="center"
                    />

                <!-- Time sync between HW and Android -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/time_sync_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/time_sync_button_state"
                        android:focusableInTouchMode="true"
                        android:layout_marginRight="30dp"
                        />
                    <TextView
                        android:id="@+id/time_sync_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No Sync"
                        android:textSize="15sp"
                        android:gravity="center"
                        />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CONNECTION STATE"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/connection_state_hw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Disconnected"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MESSAGE FROM HW"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/message_from_hw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No Data"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="WEB REQUEST RESULT"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/result_from_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="15sp"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linearLayout"
                android:layout_above="@+id/text_main_team_introduction"
                android:layout_centerHorizontal="true"
                android:weightSum="6"
                >
                <ListView
                    android:id="@+id/listview_db_log"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2"
                    >
                    <Button
                        android:id="@+id/all_log_data_delete_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="DELETE ALL"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/reset_sample_log_data_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="RESET SAMPLE"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/text_main_team_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_main_team_name"
                android:gravity="center"
                android:text="@string/team_introduction"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/text_main_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/team_name"
                android:layout_marginBottom="5dp"
                android:textSize="10sp" />




        </RelativeLayout>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
